--- a/основы_python.ipynb
+++ b/основы_python.ipynb
@@ -1,87 +1,94 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "M-DGa20PaHnu"
+      },
       "source": [
         "#Задача 1\n",
         "Написать функцию на вход которой подается строка, состоящая из латинских букв.\n",
         "Функция должна вернуть количество гласных букв (a, e, i, o, u) в этой строке. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "M-DGa20PaHnu"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": 1,
       "metadata": {
         "id": "XvX8X_JJ6PCb"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "0\n",
+            "5\n",
+            "0\n"
+          ]
+        }
+      ],
+      "source": [
+        "def count_vowels(s: str) -> int:\n",
+        "    vowels = \"aeiouAEIOU\"\n",
+        "    return sum(1 for char in s if char in vowels)\n",
+        "\n",
+        "print(count_vowels(\"Example\"))\n",
+        "print(count_vowels(\"Sky\")) \n",
+        "print(count_vowels(\"AEIOU\")) \n",
+        "print(count_vowels(\"BCDFG\"))  "
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "t2ClV_Y0bbr6"
+      },
       "source": [
         "# Задача 2\n",
         "Написать функцию на вход, которой подается строка. Функция должна вернуть true, если\n",
         "каждый символ в строке встречается только 1 раз, иначе должна вернуть false. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "t2ClV_Y0bbr6"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "FppbECao6VIz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Your code goes here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "udRiIK1cdt6E"
+      },
       "source": [
         "# Задача 3\n",
         "Написать функцию, которая принимает положительное число и возвращает количество\n",
         "бит равных 1 в этом числе. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "udRiIK1cdt6E"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "6tkfDJRz6dp_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Your code goes here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "26dDUz-Ae17N"
+      },
       "source": [
         "# Задача 4\n",
         "Написать функцию, которая принимает положительное число. Функция должна вернуть то,\n",
@@ -92,118 +99,138 @@
         "· 4 функция должна вернуть 0, так как число уже состоит из одной цифры\n",
         "· 999 функция должна вернуть 4, так как 9*9*9=729 => 7*2*9=126 => 1*2*6=12 =>\n",
         "1*2=2. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "26dDUz-Ae17N"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "BH1A_Mgi6i4G"
+      },
+      "outputs": [],
       "source": [
         "def magic(n):\n",
         "    # Your code goes here\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "BH1A_Mgi6i4G"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "0nS-kIa8g8vd"
+      },
       "source": [
         "# Задача 5\n",
         "Написать функцию, которая принимает два целочисленных вектора одинаковой длины и\n",
         "возвращает среднеквадратическое отклонение двух векторов. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "0nS-kIa8g8vd"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "8iphx4LM6xbx"
+      },
+      "outputs": [],
       "source": [
         "def mse(pred, true):\n",
         "    # Your code goes here\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "8iphx4LM6xbx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "vpIPKL439zkw"
+      },
       "source": [
         "# Задача 6\n",
         "Написать функцию, принимающая целое положительное число. Функция должна вернуть\n",
         "строку вида “(n1**p1)(n2**p2)…(nk**pk)” представляющая разложение числа на простые\n",
         "множители (если pi == 1, то выводить только ni).\n",
         "Например, для числа 86240 функция должна вернуть “(2**5)(5)(7**2)(11)”. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "vpIPKL439zkw"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "pFebmcZk94Jw"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Your code goes here"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "ps2s0BudX7A2"
+      },
       "source": [
         "# Задача 7\n",
         "Написать функцию, принимающая целое число n, задающее количество кубиков. Функция\n",
         "должна определить, можно ли из данного кол-ва кубиков построить пирамиду, то есть\n",
         "можно ли представить число n как 1^2+2^2+3^2+…+k^2. Если можно, то функция должна\n",
         "вернуть k, иначе строку “It is impossible”. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "ps2s0BudX7A2"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "3YPjEXxhX_YT"
+      },
+      "outputs": [],
       "source": [
         "def pyramid(number):\n",
         "    # Your code goes here\n",
         "    pass"
-      ],
-      "metadata": {
-        "id": "3YPjEXxhX_YT"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KeKgmIdAQMEJ"
+      },
       "source": [
         "# Задача 8\n",
         "Функция принимает на вход положительное число и определяет является ли оно сбалансированным, т.е. сумма цифр до средних равна сумме цифр после. Средними в случае нечетного числа цифр считать одну цифру, в случае четного - две средних. Написать тесты для кода"
-      ],
-      "metadata": {
-        "id": "KeKgmIdAQMEJ"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# Your code goes here"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "gMAAqtqlQrZt"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# Your code goes here"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.12.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
