--- a/основы_python.ipynb
+++ b/основы_python.ipynb
@@ -53,13 +53,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "FppbECao6VIz"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "True\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your code goes here"
+        "def is_unique(s: str) -> bool:\n",
+        "    return len(s) == len(set(s))\n",
+        "\n",
+        "print(is_unique(\"abcdef\")) \n",
+        "print(is_unique(\"hello\"))  \n",
+        "print(is_unique(\"\"))  \n",
+        "print(is_unique(\"aA\"))  "
       ]
     },
     {
@@ -75,13 +92,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "6tkfDJRz6dp_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "3\n",
+            "0\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your code goes here"
+        "def count_bits(n: int) -> int:\n",
+        "    return bin(n).count('1')\n",
+        "\n",
+        "print(count_bits(5))  \n",
+        "print(count_bits(7))  \n",
+        "print(count_bits(0))  \n",
+        "print(count_bits(1023))  "
       ]
     },
     {
@@ -103,15 +137,42 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "BH1A_Mgi6i4G"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "0\n",
+            "4\n",
+            "1\n"
+          ]
+        }
+      ],
       "source": [
-        "def magic(n):\n",
-        "    # Your code goes here\n",
-        "    pass"
+        "def magic(n: int) -> int:\n",
+        "    if n < 10:\n",
+        "        return 0  \n",
+        "    \n",
+        "    count = 0\n",
+        "    while n >= 10: \n",
+        "        product = 1\n",
+        "        while n > 0:\n",
+        "            product *= n % 10  \n",
+        "            n //= 10\n",
+        "        n = product\n",
+        "        count += 1\n",
+        "        \n",
+        "    return count\n",
+        "\n",
+        "print(magic(39))  \n",
+        "print(magic(4))   \n",
+        "print(magic(999)) \n",
+        "print(magic(123)) "
       ]
     },
     {
@@ -127,15 +188,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "id": "8iphx4LM6xbx"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0.0\n",
+            "9.0\n",
+            "1.0\n",
+            "16.666666666666668\n",
+            "0.0\n"
+          ]
+        }
+      ],
       "source": [
         "def mse(pred, true):\n",
-        "    # Your code goes here\n",
-        "    pass"
+        "    return sum((p - t) ** 2 for p, t in zip(pred, true)) / len(pred) \n",
+        "\n",
+        "print(mse([1, 2, 3], [1, 2, 3])) \n",
+        "print(mse([1, 2, 3], [4, 5, 6]))  \n",
+        "print(mse([1, 0, 1], [0, 1, 0]))  \n",
+        "print(mse([10, 20, 30], [10, 25, 35]))\n",
+        "print(mse([5, 5, 5], [5, 5, 5]))"
       ]
     },
     {
@@ -153,13 +231,52 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 31,
       "metadata": {
         "id": "pFebmcZk94Jw"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(2**5)(5)(7**2)(11)\n",
+            "(2**2)(7)\n",
+            "(2**2)(5**2)\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your code goes here"
+        "def prime_factorization(n: int) -> str:\n",
+        "    if n < 1:\n",
+        "        return \"\"\n",
+        "\n",
+        "    factors = {}\n",
+        "    divisor = 2\n",
+        "\n",
+        "    while n > 1:\n",
+        "        while n % divisor == 0:\n",
+        "            if divisor in factors:\n",
+        "                factors[divisor] += 1\n",
+        "            else:\n",
+        "                factors[divisor] = 1\n",
+        "            n //= divisor\n",
+        "        divisor += 1\n",
+        "\n",
+        "    result = \"\"\n",
+        "    for prime, count in factors.items():\n",
+        "        if count == 1:\n",
+        "            result += f\"({prime})\"\n",
+        "        else:\n",
+        "            result += f\"({prime}**{count})\"\n",
+        "\n",
+        "    return result\n",
+        "\n",
+        "print(prime_factorization(86240))   \n",
+        "print(prime_factorization(28))     \n",
+        "print(prime_factorization(100))     \n",
+        "print(prime_factorization(1))       \n"
       ]
     },
     {
@@ -177,15 +294,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 37,
       "metadata": {
         "id": "3YPjEXxhX_YT"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "It is impossible\n",
+            "5\n"
+          ]
+        }
+      ],
       "source": [
-        "def pyramid(number):\n",
-        "    # Your code goes here\n",
-        "    pass"
+        "def pyramid(n: int) -> str:\n",
+        "    k = 1\n",
+        "    total = 0\n",
+        "\n",
+        "    while total < n:\n",
+        "        total += k ** 2\n",
+        "        if total == n:\n",
+        "            return k\n",
+        "        k += 1\n",
+        "\n",
+        "    return \"It is impossible\"\n",
+        "\n",
+        "print(pyramid(1))   \n",
+        "print(pyramid(5))    \n",
+        "print(pyramid(6))    \n",
+        "print(pyramid(55)) "
       ]
     },
     {
@@ -200,13 +341,43 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "gMAAqtqlQrZt"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "False\n",
+            "False\n",
+            "True\n"
+          ]
+        }
+      ],
       "source": [
-        "# Your code goes here"
+        "def is_balanced(n: int) -> bool:\n",
+        "    digits = str(n)\n",
+        "    length = len(digits)\n",
+        "\n",
+        "    if length % 2 == 0:\n",
+        "        mid1 = length // 2 - 1\n",
+        "        mid2 = length // 2\n",
+        "        left_sum = sum(int(d) for d in digits[:mid1 + 1])\n",
+        "        right_sum = sum(int(d) for d in digits[mid2:])\n",
+        "    else:\n",
+        "        mid = length // 2\n",
+        "        left_sum = sum(int(d) for d in digits[:mid])\n",
+        "        right_sum = sum(int(d) for d in digits[mid + 1:])\n",
+        "\n",
+        "    return left_sum == right_sum\n",
+        "\n",
+        "print(is_balanced(123321))\n",
+        "print(is_balanced(123456))  \n",
+        "print(is_balanced(1234567)) \n",
+        "print(is_balanced(0))   "
       ]
     }
   ],
